# vellarys

./: .gitignore  ANALYSIS.md  APPLY_PREMIUM_PLANS_RAILWAY.sql  AUDITORIA_BIG_TECH.md  AUDITORIA_ESCALABILIDADE_2026.md  CRM_INBOX_FEATURES.md  CRM_INBOX_IMPLEMENTATION.md  DEPLOY_CHECKLIST.md  DEPLOY_CRM_UPGRADE.md  DEPLOY_GUIDE.md  EXECUTE_THIS_ON_RAILWAY.md  GOD_MODE_STRUCTURE.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  NOTIFICACOES_IOS.md  OTIMIZACOES_PRODUCAO.md  PERMISSIONS_ARCHITECTURE.md  PLANOS_ESTRATEGIA_2026.md  PLANOS_ESTRATEGIA_2026_V2.md  QUICK_START_CRM_INBOX.md  RAILWAY_MIGRATION_GUIDE.md  README.md  REFACTORING_PLAN.md  RUNBOOK.md  STRATEGIC_ANALYSIS.md  TESTING_GUIDE.md  apply_premium_plans.sh  create-test-opportunity.html  docker-compose.yml  estrutura.txt  fix_database.sql  generate_vapid.py  novas-mudancas-jules.txt  test-opportunity.html  test_briefing.py  test_crm_inbox.sh  verify_changes.py  walkthrough.md
backend/: .env.example  Dockerfile  FIX_PRODUCTION_DB.md  GOOGLE_TTS_SETUP.md  alembic.ini  apply_fix.py  apply_premium_plans.py  create_test_opportunity.py  fix_db.py  fix_missing_columns.sql  generate_admin_hash.py  nixpacks.toml  pyproject.toml  requirements.txt  run_fix_once.sh  start.sh  temp_hash.py  test_property_lookup.py  test_qualifier.py
backend/alembic/: env.py
backend/data/: fallback_canoas.json
backend/scripts/: __init__.py  migrate_entitlements_data.py  migrate_portal_to_data_sources.py  railway_migration.sh  seed_response_templates.py  update_plan_features.py  verify_deployment.py
backend/src/: config.py
(+356 files in other folders)
