[project]
name = "velaris"
version = "0.1.0"
description = "IA atendente B2B multi-tenant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "pytz>=2024.1",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
    "twilio>=8.0.0",
    "redis>=5.0.0",
    "pywebpush>=1.14.0",
    "apscheduler>=3.10.0",
    "slowapi==0.1.9",
    "pandas>=2.2.0",
    "resend>=0.8.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "numpy>=1.24.0",
    "python-slugify>=8.0.0",
    "cryptography>=42.0.0",
    "aiofiles>=23.2.0",
    "google-cloud-texttospeech>=2.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "ruff>=0.1.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
create-superadmin = "src.scripts.create_superadmin:main"
